# LinAlgResearchLib

./: .gitmodules  CMakeLists.txt  README.md
Source/: Main.cpp  Utils.h
Source/Math/: Matrix.h  SparseMatrix.h
Source/Tests/: Test.h  TestSparseMatrix.h
